# Woracle

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly-gpu.yml  release.yml
docs/: PLUGINS.md
docs/assets/: results.json
specs/blobworld-insert/: spec.yaml
specs/rh20t-pipette-insert/: spec.yaml
src/woracle/: __init__.py  _version.py  api.py  errors.py  protocols.py  registry.py  store.py
src/woracle/channels/: __init__.py  demo_match.py  phases.py  predicates.py  tlcheck.py  trajectory.py  verdict.py
src/woracle/cli/: main.py
src/woracle/compile/: __init__.py
src/woracle/compiler/: __init__.py  compile.py  entities.py  negatives.py  selftest.py
src/woracle/contracts/: __init__.py  base.py  binding.py  gate.py  manifest.py  migrations.py  rollout.py  score.py  spec.py
src/woracle/gate/: __init__.py  compose.py  signals.py
src/woracle/ground/: __init__.py
src/woracle/grounders/: __init__.py  linking.py  openvocab.py  passthrough.py  relational.py
src/woracle/io/: __init__.py  episodes.py  video.py
src/woracle/judges/: __init__.py  base.py  http_backend.py  progress_gvl.py
src/woracle/pipeline/: __init__.py  run.py
src/woracle/report/: __init__.py  render.py
src/woracle/reporting/: __init__.py  html.py  render.py
src/woracle/stats/: __init__.py  conformal.py  mnar.py  ppi.py  rankboot.py
src/woracle/testing/: __init__.py  blobworld.py  conformance.py  corruptions.py  oracle_backend.py  plugins.py
studies/binding/: REPORT.md  run_study.py
studies/binding/out_tiled/: study.json
studies/wm_test/: GROUNDING_FIX.md  export_rh20t_episodes.py  grade_wm.py  multitask_experiment.py  retest_real_episodes.py
tests/: conftest.py
tests/conformance/: test_first_party.py
tests/e2e/: test_blob_e2e.py  test_compiler.py  test_gate_benchmark.py  test_report_p5.py
tests/golden/: test_schemas.py
tests/golden/schemas/: DemoSet.json  GateReport.json  GradeCard.json  GroundedRollout.json  Leaderboard.json  RolloutRef.json  RunManifest.json  TaskSpec.json
tests/integration/: test_demo_match_real.py  test_openvocab_real.py
tests/property/: test_roundtrips.py
tests/unit/: test_blobworld.py  test_channels_p3.py  test_conformal.py  test_contracts.py  test_critic_regressions.py  test_ensemble.py  test_gate_signals.py  test_import_hygiene.py  test_linking.py  test_migrations.py  test_predicates.py  test_registry.py  test_selftest_integrity.py  test_stats_p5.py  test_store.py  test_video_io.py
